<resources>
    <string name="app_name">Multiling</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password_again">Password Again</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="level">Level</string>
    <string name="username">UserName</string>
    <string name="submit">Submit</string>

    <string-array name="notification_titles">
        <item>Streak Disrupted</item>
        <item>Flash Cards</item>
        <item>Writing Exercises</item>
        <item>Congratulations!</item>
        <item>New Update</item>
    </string-array>
</resources>